--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-project",
+  "name": "angular2-workshop",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
@@ -22,7 +22,8 @@
     "@angular/router": "^3.4.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.7.6",
+    "angular-in-memory-web-api": "0.1.13"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-beta.32.3",
